# centinela-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
backend/: .env.example  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: events.py  health.py  traces.py
backend/scripts/: smoke_e2e.py
backend/tests/: _helpers.py  conftest.py  test_auth.py  test_ingest.py  test_isolation.py  test_traces.py
centinela/: __init__.py  client.py  config.py  errors.py  events.py  trace.py  transport.py
centinela/integrations/: __init__.py  _common.py  anthropic.py  langchain.py  openai.py
tests/: conftest.py  test_compliance_signals.py  test_config_and_client.py  test_events_and_trace.py  test_redact_fields.py  test_transport.py  test_wrap.py
