[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centinela-backend"
version = "0.1.0"
description = "Centinela ingestion & query backend"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
